Optimize layout for contact section

--- a/index.html
+++ b/index.html
@@ -112,20 +112,38 @@
         </div>
         <div class="child-grid" id="contact">
             <h1><span>Contact</span></h1>
-            <p>If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
-            <button id="button">
-                <a class="button-link" id="contact-link" href="mailto:livia-welschinger@t-online.de">Contact me</a>
-            </button>
-<!--              <img id="img_messaging" src="images/undraw_messaging_fun_86y2.png">-->
+            <div class="flex-wrapper">
+                <div class="flex-item-left">
+                    <p>If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
+                    <button id="button">
+                        <a class="button-link" id="contact-link" href="mailto:livia-welschinger@t-online.de">Contact me</a>
+                    </button>
+                </div>
+                <div class="flex-item">
+                    <img id="img_messaging" src="images/undraw_messaging_fun_86y2.png">
+                </div>
+
+            </div>
+           <!-- <div class="contact-grid">
+                <div>
+                    <p>If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
+                    <button id="button">
+                        <a class="button-link" id="contact-link" href="mailto:livia-welschinger@t-online.de">Contact me</a>
+                    </button>
+                </div>
+                <div id="img_messaging_div">
+                    <img id="img_messaging" src="images/undraw_messaging_fun_86y2.png">
+                </div>
+            </div>-->
         </div>
     </main>
     <footer>
-        <div class="footer-child-grid">
+        <div>
             <p class="p-footer">© Designed and coded by Livia Welschinger</p>
             <p class="p-footer">Icons made by <a class="link" href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a class="link" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
             <p class="p-footer">Illustration from <a class="link" href="https://undraw.co" title="unDraw">unDraw</a></p>
             </div>
-        <div class="footer-child-grid"> <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon" src="images/github.png"></a>
+        <div> <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon" src="images/github.png"></a>
             <a href="https://www.instagram.com/liviacodes/?hl=de" target="_blank"> <img class="icon"
                                                                                         src="images/instagram.png"></a>
             <a href="https://www.linkedin.com/in/livia-welschinger/" target="_blank"><img class="icon"
