--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <link href="css/menu.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <script src="jquery-3.4.1.min.js"></script>
-    <script type="text/javascript">
-    </script>
 </head>
-
 <body>
 <!--<div class="menu-wrapper">
     <input class="toggler" type="checkbox">
@@ -38,13 +34,10 @@
         <div class="child-grid" id="home">
             <div class="flex-wrapper">
                 <div class="flex-item" id="flex-item-home">
-                        <br>
-                        <br>
-                        <br>
-                        <h1><span>Hi, I'm Livia Welschinger</span></h1>
-                        <h1 class="violet">
-                            <span>Full stack developer</span>
-                        </h1>
+                    <h1><span>Hi, I'm Livia Welschinger</span></h1>
+                    <h1 class="violet">
+                        <span>Full stack developer</span>
+                    </h1>
                 </div>
                 <div class="flex-item">
                     <div><img id="img_profile" src="images/profil.png"></div>
@@ -93,14 +86,14 @@
                 <li>Docker</li>
             </ul>
             <p><span>Frontend</span></p>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>jQuery</li>
-                    <li>Thymeleaf</li>
-                    <li>React</li>
-                </ul>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>jQuery</li>
+                <li>Thymeleaf</li>
+                <li>React</li>
+            </ul>
         </div>
         <div class="child-grid" id="projects">
             <h1><span>Projects</span></h1>
@@ -114,9 +107,11 @@
             <h1><span>Contact</span></h1>
             <div class="flex-wrapper">
                 <div class="flex-item-left">
-                    <p>If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
+                    <p>If you want to get to know more about me and my work, are interested in a cooperation or have any
+                        questions, feel free to contact me.</p>
                     <button id="button">
-                        <a class="button-link" id="contact-link" href="mailto:livia-welschinger@t-online.de">Contact me</a>
+                        <a class="button-link" id="contact-link" href="mailto:livia-welschinger@t-online.de">Contact
+                            me</a>
                     </button>
                 </div>
                 <div class="flex-item">
@@ -124,40 +119,27 @@
                 </div>
 
             </div>
-           <!-- <div class="contact-grid">
-                <div>
-                    <p>If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
-                    <button id="button">
-                        <a class="button-link" id="contact-link" href="mailto:livia-welschinger@t-online.de">Contact me</a>
-                    </button>
-                </div>
-                <div id="img_messaging_div">
-                    <img id="img_messaging" src="images/undraw_messaging_fun_86y2.png">
-                </div>
-            </div>-->
         </div>
     </main>
     <footer>
         <div>
             <p class="p-footer">© Designed and coded by Livia Welschinger</p>
-            <p class="p-footer">Icons made by <a class="link" href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a class="link" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+            <p class="p-footer">Icons made by <a class="link" href="https://www.flaticon.com/authors/freepik"
+                                                 title="Freepik">Freepik</a> from <a class="link"
+                                                                                     href="https://www.flaticon.com/"
+                                                                                     title="Flaticon">www.flaticon.com</a>
+            </p>
             <p class="p-footer">Illustration from <a class="link" href="https://undraw.co" title="unDraw">unDraw</a></p>
-            </div>
-        <div> <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon" src="images/github.png"></a>
+        </div>
+        <div><a href="https://github.com/liviawelschinger" target="_blank"><img class="icon"
+                                                                                src="images/github.png"></a>
             <a href="https://www.instagram.com/liviacodes/?hl=de" target="_blank"> <img class="icon"
                                                                                         src="images/instagram.png"></a>
             <a href="https://www.linkedin.com/in/livia-welschinger/" target="_blank"><img class="icon"
                                                                                           src="images/linkedin.png"></a>
             <a href="https://www.xing.com/profile/Livia_Welschinger/cv" target="_blank"><img class="icon"
-                                                                                             src="images/xing.png"></a></div>
-                <!-- TODO Credit icons -->
-               <!-- <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon" src="images/github.png"></a>
-                <a href="https://www.instagram.com/liviacodes/?hl=de" target="_blank"> <img class="icon"
-                                                                                            src="images/instagram.png"></a>
-                <a href="https://www.linkedin.com/in/livia-welschinger/" target="_blank"><img class="icon"
-                                                                                              src="images/linkedin.png"></a>
-                <a href="https://www.xing.com/profile/Livia_Welschinger/cv" target="_blank"><img class="icon"
-                                                                                                 src="images/xing.png"></a>-->
+                                                                                             src="images/xing.png"></a>
+        </div>
     </footer>
 </div>
 
