Check spelling and orthography

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>
                 When I was a teenager my interest on technology has been growing more and more. I liked the idea of
                 using technology in order to
-                solve problems and to make the world a little bit better. Therefore I decided to study Business
+                solve problems and to make the world a little bit better. Therefore, I decided to study Business
                 Computing after high school.
                 At the University of Applied Sciences in Berlin I had the chance to get to know not only the field of
                 computer science but also about the business side with courses such as marketing.
@@ -62,22 +62,22 @@
             <p> But my real passion is programming. I love to <span>solve real problems, being creative and to build something
                 new</span>.
                 I document my learning process on <a class="link" href="https://www.instagram.com/liviacodes/?hl=de"
-                                                     target="_blank">Instagram</a> where I share my progress, tips and
+                                                     target="_blank">Instagram</a>, where I share my progress, tips and
                 tricks with over 3000 followers.
             </p>
         </div>
         <div class="child-grid" id="skills">
             <h1><span>Skills</span></h1>
             <p>I come from the back-end side. Working at adesso AG, an international provider of consulting and software
-                services I wrote my bachelor thesis about microservices with Spring Boot and Spring Cloud as extension
+                services, I wrote my bachelor thesis about microservices with Spring Boot and Spring Cloud as extension
                 and part of the Java based <a class="link" href="https://spring.io" target="_blank">Spring Framework</a>.
-                But I'm also interested in front-end development and to improve my skills continuously. Therefore I'm
+                But I'm also interested in front-end development and to improve my skills continuously. Hence, I'm
                 currently taking the Udemy course <a class="link"
                                                      href="https://www.udemy.com/course/react-the-complete-guide-incl-redux/"
                                                      target="_blank">React - The Complete Guide (incl Hooks, React
                     Router, Redux)</a>.
             </p>
-            <p><span>Backend</span></p>
+            <p><span>back-end</span></p>
             <ul>
                 <li>Java</li>
                 <li>Spring</li>
@@ -85,7 +85,7 @@
                 <li>NoSQL</li>
                 <li>Docker</li>
             </ul>
-            <p><span>Frontend</span></p>
+            <p><span>front-end</span></p>
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
