--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8" content="width-device-width, initial-scale =1.0" http-equiv="content-type" name="viewport">
+    <meta charset="utf-8" name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
     <title>Livia Welschinger</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <link href="css/menu.css" rel="stylesheet" type="text/css">
