Changed home section into css grid layout

--- a/index.html
+++ b/index.html
@@ -30,19 +30,17 @@
 </div>-->
 <div class="grid-wrapper">
     <main>
-        <div class="child-grid" id="home">
-            <div class="flex-wrapper">
-                <div class="flex-item" id="flex-item-home">
+        <div class="child-grid-home">
+                <div id="home-text">
                     <h1><span>Hi, I'm Livia Welschinger</span></h1>
-                    <h1 class="violet">
+                    <h2 class="violet">
                         <span>Full stack developer</span>
-                    </h1>
+                    </h2>
                 </div>
-                <div class="flex-item">
-                    <div><img id="img_profile" src="images/profil.png"></div>
-                </div>
-
+            <div>
+                <img id="img_profile" src="images/profil.png">
             </div>
+
         </div>
         <div class="child-grid" id="about">
             <h1><span>About</span></h1>
@@ -113,9 +111,9 @@
                             me</a>
                     </button>
                 </div>
-                <div class="flex-item">
+                <!--<div class="flex-item">
                     <img id="img_messaging" src="images/undraw_messaging_fun_86y2.png">
-                </div>
+                </div>-->
 
             </div>
         </div>
