Change layout of contact section to css grid

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="grid-wrapper">
     <main>
         <div class="child-grid-home">
-                <div id="home-text">
+                <div>
                     <h1><span>Hi, I'm Livia Welschinger</span></h1>
                     <h2 class="violet">
                         <span>Full stack developer</span>
@@ -101,7 +101,7 @@
             <p>PROJECTS COMING SOON</p>
         </div>
         <div class="child-grid" id="contact">
-            <h1><span>Contact</span></h1>
+           <!-- <h1><span>Contact</span></h1>
             <div class="flex-wrapper">
                 <div class="flex-item-left">
                     <p>If you want to get to know more about me and my work, are interested in a cooperation or have any
@@ -111,9 +111,24 @@
                             me</a>
                     </button>
                 </div>
-                <!--<div class="flex-item">
+                &lt;!&ndash;<div class="flex-item">
                     <img id="img_messaging" src="images/undraw_messaging_fun_86y2.png">
-                </div>-->
+                </div>&ndash;&gt;
+
+            </div>-->
+            <div class="child-grid-contact">
+                <div>
+                    <h1><span>Contact</span></h1>
+                    <p>If you want to get to know more about me and my work, are interested in a cooperation or have any
+                        questions, feel free to contact me.</p>
+                    <button id="button">
+                        <a class="button-link" id="contact-link" href="mailto:livia-welschinger@t-online.de">Contact
+                            me</a>
+                    </button>
+                </div>
+                <div>
+                    <img id="img_messaging" src="images/undraw_messaging_fun_86y2.png">
+                </div>
 
             </div>
         </div>
