--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
     <title>Livia Welschinger</title>
     <meta name="description" content="Full stack developer from Berlin, Germany.">
+    <meta name="keywords" content="software developer, software entwickler, software development, softwareentwicklung, java, spring framework, spring boot, full stack, back-end, backend, front-end, frontend" />
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <link href="css/menu.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
