Edited width for mobile version

--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
             <div class="child-grid-contact">
                 <div>
                     <h1><span>Contact</span></h1>
-                    <p>If you want to get to know more about me and my work, are interested in a cooperation or have any
-                        questions, feel free to contact me.</p>
+                    <p>If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
                     <button id="button">
                         <a class="button-link" id="contact-link" href="mailto:livia-welschinger@t-online.de">Contact
                             me</a>
