Add target="_blank" for all links

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
         <div>
             <p class="p-footer">© Designed and coded by Livia Welschinger</p>
             <p class="p-footer">Icons made by <a class="link" href="https://www.flaticon.com/authors/freepik"
-                                                 title="Freepik">Freepik</a> from <a class="link"
+                                                 title="Freepik" target="_blank">Freepik</a> from <a class="link"
                                                                                      href="https://www.flaticon.com/"
-                                                                                     title="Flaticon">www.flaticon.com</a>
+                                                                                     title="Flaticon" target="_blank">www.flaticon.com</a>
             </p>
-            <p class="p-footer">Illustration from <a class="link" href="https://undraw.co" title="unDraw">unDraw</a></p>
+            <p class="p-footer">Illustration from <a class="link" href="https://undraw.co" title="unDraw" target="_blank">unDraw</a></p>
         </div>
         <div><a href="https://github.com/liviawelschinger" target="_blank"><img class="icon"
                                                                                 src="images/github.png"></a>
