--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
         <div class="child-grid" id="about">
             <h1><span>About</span></h1>
             <p>
-                I'm a 22 year old junior software developer from Berlin, Germany. I work at urban ENERGY, a Berlin
-                startup which has the goal to bring eMobility into urban areas.
-            </p>
-            <p>
+                I'm a 22 year old junior software developer from Berlin, Germany.
                 When I was a teenager my interest on technology has been growing more and more. I liked the idea of
                 using technology in order to
                 solve problems and to make the world a little bit better. Therefore, I decided to study Business
@@ -62,7 +59,7 @@
                 new</span>.
                 I document my learning process on <a class="link" href="https://www.instagram.com/liviacodes/?hl=de"
                                                      target="_blank">Instagram</a>, where I share my progress, tips and
-                tricks with over 3000 followers.
+                tricks with over 4000 followers.
             </p>
         </div>
         <div class="child-grid" id="skills">
