--- a/index.html
+++ b/index.html
@@ -2,158 +2,66 @@
 <html>
 
 <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
+    <meta charset="utf-8" name="viewport"
+          content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
     <title>Livia Welschinger</title>
     <meta name="description" content="Full stack developer from Berlin, Germany.">
-    <meta name="keywords" content="software developer, software entwickler, software development, softwareentwicklung, java, spring framework, spring boot, full stack, back-end, backend, front-end, frontend" />
-    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <meta name="keywords"
+          content="software developer, software entwickler, software development, softwareentwicklung, java, spring framework, spring boot, full stack, back-end, backend, front-end, frontend"/>
+    <!--    <link href="css/main.css" rel="stylesheet" type="text/css">-->
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/menu.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-<!--<div class="menu-wrapper">
-    <input class="toggler" type="checkbox">
-    <div class="hamburger">
-        <div></div>
+<nav>
+
+</nav>
+<section id="home" class="grid">
+    <div class="home-img">
+        <img src="images/Landing%20page%20illustration.svg">
     </div>
-    <div class="menu">
-        <div>
-            <div>
-                <ul>
-                    <li><a href="#"><span>Home</span></a></li>
-                    <li><a href="#about"><span>About</span></a></li>
-                    <li><a href="#skills"><span>Skills</span></a></li>
-                    <li><a href="#projects"><span>Projects</span></a></li>
-                    <li><a href="#contact"><span>Contact</span></a></li>
-                </ul>
-            </div>
-        </div>
+    <div class="home-text">
+        <h3>Hi I'm Livia Welschinger</h3>
+        <h1>Full stack developer</h1>
+        <p id="home-p">I solve problems with</p>
+        <p>design and code.</p>
+        <a href="#about">
+            <button class="primary-button">About me</button>
+        </a>
     </div>
-</div>-->
-<div class="grid-wrapper">
-    <main>
-        <div class="child-grid-home">
-                <div>
-                    <h1><span>Hi, I'm Livia Welschinger</span></h1>
-                    <h2 class="violet">
-                        <span>Full stack developer</span>
-                    </h2>
-                </div>
-            <div>
-                <img id="img_profile" src="images/profil.png">
-            </div>
+</section>
+<section id="about" class="grid">
+    <h3 class="section-headline">About me</h3>
+    <p class="section-text">
+        I'm a 22 year old junior software developer from Berlin, Germany.
+    <p>
+    <p class="section-text">
+        Studying Business Computing at the University of Applied Sciences in Berlin I had the chance to get to know not
+        only the field of computer science but also about the business side with courses such as marketing.
+    </p>
+    <p class="section-text"> For me, programming is not just a job, it’s my passion. I love to solve real problems,
+        being creative and to build something new. Helping others to become a full stack developer, I document my
+        learning process on Instagram, where I share my progress, tips and tricks with over 4000 followers.
+    </p>
+</section>
+<section id="projects" class="grid">
+    <h3 class="section-headline">Projects</h3>
+    <p class="section-text">
+        I really enjoy building things and being creative. Have a look on some of my projects I have been working on.    <p>
+    </p>
+</section>
+<section id="contact" class="grid">
+    <h3 class="section-headline">Contact</h3>
+    <div class="contact-img">
+        <img src="images/undraw_mail_box_kd5i%201.svg">
+    </div>
+    <p class="section-text">
+        If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
+</section>
+<footer>
 
-        </div>
-        <div class="child-grid" id="about">
-            <h1><span>About</span></h1>
-            <p>
-                I'm a 22 year old junior software developer from Berlin, Germany.
-                When I was a teenager my interest on technology has been growing more and more. I liked the idea of
-                using technology in order to
-                solve problems and to make the world a little bit better. Therefore, I decided to study Business
-                Computing after high school.
-                At the University of Applied Sciences in Berlin I had the chance to get to know not only the field of
-                computer science but also about the business side with courses such as marketing.
-            </p>
-            <p> But my real passion is programming. I love to <span>solve real problems, being creative and to build something
-                new</span>.
-                I document my learning process on <a class="link" href="https://www.instagram.com/liviacodes/?hl=de"
-                                                     target="_blank">Instagram</a>, where I share my progress, tips and
-                tricks with over 4000 followers.
-            </p>
-        </div>
-        <div class="child-grid" id="skills">
-            <h1><span>Skills</span></h1>
-            <p>I come from the back-end side. Working at adesso AG, an international provider of consulting and software
-                services, I wrote my bachelor thesis about microservices with Spring Boot and Spring Cloud as extension
-                and part of the Java based <a class="link" href="https://spring.io" target="_blank">Spring Framework</a>.
-                But I'm also interested in front-end development and to improve my skills continuously. Hence, I'm
-                currently taking the Udemy course <a class="link"
-                                                     href="https://www.udemy.com/course/react-the-complete-guide-incl-redux/"
-                                                     target="_blank">React - The Complete Guide (incl Hooks, React
-                    Router, Redux)</a>.
-            </p>
-            <p><span>back-end</span></p>
-            <ul>
-                <li>Java</li>
-                <li>Spring</li>
-                <li>SQL</li>
-                <li>NoSQL</li>
-                <li>Docker</li>
-            </ul>
-            <p><span>front-end</span></p>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>jQuery</li>
-                <li>Thymeleaf</li>
-                <li>React</li>
-            </ul>
-        </div>
-        <div class="child-grid" id="projects">
-            <h1><span>Projects</span></h1>
-            <p>
-                I really enjoy building things and being creative. Have a look on some of my projects I have been
-                working on.
-            </p>
-            <p>PROJECTS COMING SOON</p>
-        </div>
-        <div class="child-grid" id="contact">
-           <!-- <h1><span>Contact</span></h1>
-            <div class="flex-wrapper">
-                <div class="flex-item-left">
-                    <p>If you want to get to know more about me and my work, are interested in a cooperation or have any
-                        questions, feel free to contact me.</p>
-                    <button id="button">
-                        <a class="button-link" id="contact-link" href="mailto:livia-welschinger@t-online.de">Contact
-                            me</a>
-                    </button>
-                </div>
-                &lt;!&ndash;<div class="flex-item">
-                    <img id="img_messaging" src="images/undraw_messaging_fun_86y2.png">
-                </div>&ndash;&gt;
-
-            </div>-->
-            <div class="child-grid-contact">
-                <div>
-                    <h1><span>Contact</span></h1>
-                    <p>If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
-                    <button id="button">
-                        <a class="button-link" id="contact-link" href="mailto:livia-welschinger@t-online.de">Contact
-                            me</a>
-                    </button>
-                </div>
-                <div>
-                    <img id="img_messaging" src="images/undraw_messaging_fun_86y2.png">
-                </div>
-
-            </div>
-        </div>
-    </main>
-    <footer>
-        <div>
-            <p class="p-footer">© Designed and coded by Livia Welschinger</p>
-            <p class="p-footer">Icons made by <a class="link" href="https://www.flaticon.com/authors/freepik"
-                                                 title="Freepik" target="_blank">Freepik</a> from <a class="link"
-                                                                                     href="https://www.flaticon.com/"
-                                                                                     title="Flaticon" target="_blank">www.flaticon.com</a>
-            </p>
-            <p class="p-footer">Illustration from <a class="link" href="https://undraw.co" title="unDraw" target="_blank">unDraw</a></p>
-        </div>
-        <div><a href="https://github.com/liviawelschinger" target="_blank"><img class="icon"
-                                                                                src="images/github.png"></a>
-            <a href="https://www.instagram.com/liviacodes/?hl=de" target="_blank"> <img class="icon"
-                                                                                        src="images/instagram.png"></a>
-            <a href="https://www.linkedin.com/in/livia-welschinger/" target="_blank"><img class="icon"
-                                                                                          src="images/linkedin.png"></a>
-            <a href="https://www.xing.com/profile/Livia_Welschinger/cv" target="_blank"><img class="icon"
-                                                                                             src="images/xing.png"></a>
-        </div>
-    </footer>
-</div>
-
-
+</footer>
 </body>
 
 
