Add section headline styles, primary buttons and fixed header

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
         If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
 </section>
 <footer>
+    <div>
+       <p>@Copyright Livia Welschinger</p>
+    </div>
+    <div class="social-icons">
+
+    </div>
 
 </footer>
 </body>
