--- a/index.html
+++ b/index.html
@@ -83,10 +83,17 @@
 </section>
 <footer>
     <div>
-       <p>@Copyright Livia Welschinger</p>
+        <p class="p-footer">© Livia Welschinger</p>
     </div>
     <div class="social-icons">
-
+        <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon"
+                                                                            src="images/github.png"></a>
+        <a href="https://www.instagram.com/liviacodes/?hl=de" target="_blank"> <img class="icon"
+                                                                                    src="images/instagram.png"></a>
+        <a href="https://www.linkedin.com/in/livia-welschinger/" target="_blank"><img class="icon"
+                                                                                      src="images/linkedin.png"></a>
+        <a href="https://www.xing.com/profile/Livia_Welschinger/cv" target="_blank"><img class="icon"
+                                                                                         src="images/xing.png"></a>
     </div>
 
 </footer>
