Add button for email and button hover style

--- a/index.html
+++ b/index.html
@@ -70,16 +70,21 @@
         <button class="primary-button primary-button-left">Contact me</button>
     </a>
 </section>
-<section id="contact" class="grid">
-    <div class="section-headline-div">
-        <h3>Contact</h3>
-        <div class="section-headline-underline" id="contact-headline-underline"></div>
+<section id="contact">
+    <div class="grid">
+        <div class="section-headline-div">
+            <h3>Contact</h3>
+            <div class="section-headline-underline" id="contact-headline-underline"></div>
+        </div>
+        <div class="contact-img">
+            <img src="images/undraw_mail_box_kd5i%201.svg">
+        </div>
+        <p class="section-text">
+            If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
     </div>
-    <div class="contact-img">
-        <img src="images/undraw_mail_box_kd5i%201.svg">
-    </div>
-    <p class="section-text">
-        If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
+    <a href="mailto:liviacodes@t-online.de">
+        <button class="primary-button primary-button-left" id="contact-button">Leave a message</button>
+    </a>
 </section>
 <footer>
     <div>
