Add instagram images

--- a/index.html
+++ b/index.html
@@ -49,9 +49,17 @@
         </p>
         <p class="section-text"> For me, programming is not just a job, it’s my passion. I love to solve real problems,
             being creative and to build something new. Helping others to become a full stack developer, I document my
-            learning process on Instagram, where I share my progress, tips and tricks with over 4000 followers.
+            learning process on <a href="https://www.instagram.com/liviacodes/" target="_blank" class="text-link">Instagram</a>, where I share my progress, tips and tricks with over 4000 followers.
         </p>
     </div>
+    <div id="instagram-images">
+           <img src="images/instagram-sunset.JPG" id="instagram-sunset-img">
+           <img src="images/instagram-setup.JPG" id="instagram-setup">
+        <img src="images/instagram-flowers-laptop.jpeg" id="instagram-flowers-laptop">
+        <img src="images/instagram-desk.jpg" id="instagram-desk-img">
+        <img src="images/instagram-smartphone.JPG" id="instagram-smartphone-img">
+    </div>
+
     <a href="#projects">
         <button class="primary-button primary-button-left" id="projects-button">View my projects</button>
     </a>
@@ -89,6 +97,7 @@
 <footer>
     <div>
         <p class="p-footer">© Livia Welschinger</p>
+        <a class="text-link" target="_blank">copyright page</a>
     </div>
     <div class="social-icons">
         <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon"
