Add placeholders for projects

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <h3>About me</h3>
             <div class="section-headline-underline"></div>
         </div>
+       <!-- <div>
+            <img src="images/profil.jpg">
+        </div>-->
         <p class="section-text">
             I'm a 22 year old junior software developer from Berlin, Germany.
         <p>
@@ -73,6 +76,9 @@
         <p class="section-text">
             I really enjoy building things and being creative. Have a look on some of my projects I have been working on.    <p>
     </p>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
     </div>
     <a href="#contact">
         <button class="primary-button primary-button-left">Contact me</button>
