Edit sizing of hero section

--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
 
 </nav>
 <section id="home" class="grid">
-    <div class="home-img">
-        <img src="images/Landing%20page%20illustration.svg">
-    </div>
     <div class="home-text">
         <h3>Hi I'm Livia Welschinger</h3>
         <h1>Full stack developer</h1>
@@ -33,6 +30,7 @@
             <button class="primary-button primary-button-centered">About me</button>
         </a>
     </div>
+    <img src="images/Landing%20page%20illustration.svg" id="home-img">
 </section>
 <section id="about">
     <div class="grid">
