--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <h3>Hi I'm Livia Welschinger</h3>
 <!--        <h1>Full stack developer</h1>-->
         <h1 id="type-text"></h1>
-        <p id="home-p">I solve problems with</p>
-        <p>design and code.</p>
+        <p id="home-p">I solve problems with design and code</p>
         <a href="#about">
             <button class="primary-button primary-button-centered">About me</button>
         </a>
