--- a/index.html
+++ b/index.html
@@ -53,13 +53,16 @@
             learning process on <a href="https://www.instagram.com/liviacodes/" target="_blank" class="text-link">Instagram</a>, where I share my progress, tips and tricks with over 4000 followers.
         </p>
     </div>
-    <div id="instagram-images">
-           <img src="images/instagram-sunset.JPG" id="instagram-sunset-img">
-           <img src="images/instagram-setup.JPG" id="instagram-setup">
-        <img src="images/instagram-flowers-laptop.jpeg" id="instagram-flowers-laptop">
-        <img src="images/instagram-desk.jpg" id="instagram-desk-img">
-        <img src="images/instagram-smartphone.JPG" id="instagram-smartphone-img">
-    </div>
+   <div class="row">
+       <div class="column">
+           <a><img src="images/instagram-setup.JPG"></a>
+           <a><img src="images/instagram-flowers-laptop.jpeg"></a>
+       </div>
+      <div class="column">
+          <a><img src="images/instagram-desk.jpg"></a>
+          <a><img src="images/instagram-smartphone.JPG"></a>
+      </div>
+   </div>
 
     <a href="#projects">
         <button class="primary-button primary-button-left" id="projects-button">View my projects</button>
