--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     </div>
    <div class="row">
        <div class="column">
-           <a><img src="images/instagram-setup.JPG"></a>
-           <a><img src="images/instagram-flowers-laptop.jpeg"></a>
+           <a><img src="images/instagram-setup.JPG" id="setup-img"></a>
+           <a><img src="images/instagram-flowers-laptop.JPG" id="flowers-img"></a>
        </div>
       <div class="column">
-          <a><img src="images/instagram-desk.jpg"></a>
-          <a><img src="images/instagram-smartphone.JPG"></a>
+          <a><img src="images/instagram-desk.jpg" id="desk-img"></a>
+          <a><img src="images/instagram-smartphone.JPG" id="smartphone-img"></a>
       </div>
    </div>
 
