Adjust text in about section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="images/profil.jpg">
         </div>-->
         <p class="section-text">
-            I'm a 22 year old junior software developer from Berlin, Germany.
+            I'm a 23 year old software developer from Berlin, Germany.
         <p>
         <p class="section-text">
             Studying Business Computing at the University of Applied Sciences in Berlin I had the chance to get to know not
