Deleted button links

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
 <!--        <h1>Full stack developer</h1>-->
         <h1 id="type-text"></h1>
         <p id="home-p">I solve problems with design and code</p>
-        <a href="#about">
-            <button class="primary-button primary-button-centered">About me</button>
-        </a>
     </div>
-    <img src="images/Landing%20page%20illustration.svg" id="home-img">
+    <div id="home-img-div">
+        <img src="images/Landing%20page%20illustration.svg" id="home-img">
+    </div>
 </section>
 <section id="about">
     <div class="grid">
@@ -41,17 +40,17 @@
        <!-- <div>
             <img src="images/profil.jpg">
         </div>-->
-        <p class="section-text">
-            I'm a 23 year old software developer from Berlin, Germany.
-        <p>
-        <p class="section-text">
-            Studying Business Computing at the University of Applied Sciences in Berlin I had the chance to get to know not
-            only the field of computer science but also about the business side with courses such as marketing.
-        </p>
-        <p class="section-text"> For me, programming is not just a job, it’s my passion. I love to solve real problems,
-            being creative and to build something new. Helping others to become a full stack developer, I document my
-            learning process on <a href="https://www.instagram.com/liviacodes/" target="_blank" class="text-link">Instagram</a>, where I share my progress, tips and tricks with over 4000 followers.
-        </p>
+        <div class="section-text">
+            <p>
+                I'm a 23 year old software developer from Berlin, Germany.
+                Studying Business Computing at the University of Applied Sciences in Berlin I had the chance to get to know not
+                only the field of computer science but also about the business side with courses such as marketing.
+                For me, programming is not just a job, it’s my passion. I love to solve real problems,
+                being creative and to build something new. Helping others to become a full stack developer, I document my
+                learning process on <a href="https://www.instagram.com/liviacodes/" target="_blank" class="text-link">Instagram</a>, where I share my progress, tips and tricks with over 4000 followers.
+            </p>
+
+        </div>
     </div>
    <div class="row">
        <div class="column">
@@ -63,10 +62,6 @@
           <a><img src="images/instagram-smartphone.JPG" id="smartphone-img"></a>
       </div>
    </div>
-
-    <a href="#projects">
-        <button class="primary-button primary-button-left" id="projects-button">View my projects</button>
-    </a>
 </section>
 <section id="projects">
     <div class="grid">
@@ -74,16 +69,12 @@
             <h3>Projects</h3>
             <div class="section-headline-underline" id="projects-headline-underline"></div>
         </div>
-        <p class="section-text">
-            I really enjoy building things and being creative. Have a look on some of my projects I have been working on.    <p>
-    </p>
-    <!--    <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>-->
+        <div class="section-text">
+            <p>
+                I really enjoy building things and being creative. Have a look on some of my projects I have been working on.
+        </p>
+        </div>
     </div>
-    <a href="#contact">
-        <button class="primary-button primary-button-left">Contact me</button>
-    </a>
 </section>
 <section id="contact">
     <div class="grid">
@@ -91,15 +82,15 @@
             <h3>Contact</h3>
             <div class="section-headline-underline" id="contact-headline-underline"></div>
         </div>
-        <div class="contact-img">
-            <img src="images/undraw_mail_box_kd5i%201.svg">
-        </div>
         <p class="section-text">
             If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
+        <!--<a href="mailto:liviacodes@t-online.de" class="primary-button">
+            Leave a message
+        </a>-->
+        <div id="contact-img-div">
+            <img src="images/undraw_mail_box_kd5i%201.svg" id="contact-img">
+        </div>
     </div>
-    <a href="mailto:liviacodes@t-online.de">
-        <button class="primary-button primary-button-left" id="contact-button">Leave a message</button>
-    </a>
 </section>
 <footer>
     <div>
