Add primary button for hero section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <!--        <h1>Full stack developer</h1>-->
         <h1 id="type-text"></h1>
         <p id="home-p">I solve problems with design and code</p>
+        <a href="#about" class="primary-button">Get to know me</a>
     </div>
     <div id="home-img-div">
         <img src="images/Landing%20page%20illustration.svg" id="home-img">
@@ -80,15 +81,12 @@
     <div class="grid">
         <div class="section-headline-div">
             <h3>Contact</h3>
-            <div class="section-headline-underline" id="contact-headline-underline"></div>
+            <div class="section-headline-underline"></div>
         </div>
-        <p class="section-text">
-            If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.</p>
-        <!--<a href="mailto:liviacodes@t-online.de" class="primary-button">
-            Leave a message
-        </a>-->
-        <div id="contact-img-div">
-            <img src="images/undraw_mail_box_kd5i%201.svg" id="contact-img">
+        <div class="section-text">
+            <p>
+                If you want to get to know more about me and my work, are interested in a cooperation or have any questions, feel free to contact me.
+            </p>
         </div>
     </div>
 </section>
