Change section headlines, add mail button

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 <section id="projects">
     <div class="grid">
         <div class="section-headline-div">
-            <h3>Projects</h3>
-            <div class="section-headline-underline" id="projects-headline-underline"></div>
+            <h3>My projects</h3>
+            <div class="section-headline-underline"></div>
         </div>
         <div class="section-text">
             <p>
@@ -87,7 +87,7 @@
 <section id="contact">
     <div class="grid">
         <div class="section-headline-div">
-            <h3>Contact</h3>
+            <h3>Contact me</h3>
             <div class="section-headline-underline"></div>
         </div>
         <div class="section-text">
@@ -95,6 +95,9 @@
                 If you want to get to know more about me and my work, are interested in a cooperation or have any
                 questions, feel free to contact me.
             </p>
+            <div class="button-group">
+                <a href="mailto:liviacodes@t-online.de" class="primary-button">Leave a message</a>
+            </div>
         </div>
     </div>
 </section>
