Change section headlines, add profile image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="grid">
         <div class="section-headline-div">
             <h3>About me</h3>
-            <div class="section-headline-underline"></div>
+            <div class="section-headline-underline" id="section-headline-underline-about"></div>
         </div>
         <div id="profile-img-div">
              <img src="images/profil.jpg" id="profile-img"/>
@@ -74,7 +74,7 @@
     <div class="grid">
         <div class="section-headline-div">
             <h3>My projects</h3>
-            <div class="section-headline-underline"></div>
+            <div class="section-headline-underline" id="section-headline-underline-projects"></div>
         </div>
         <div class="section-text">
             <p>
@@ -88,7 +88,7 @@
     <div class="grid">
         <div class="section-headline-div">
             <h3>Contact me</h3>
-            <div class="section-headline-underline"></div>
+            <div class="section-headline-underline" id="section-headline-underline-contact"></div>
         </div>
         <div class="section-text">
             <p>
