Add mailbox.svg and styles for smartphones

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             </div>
         </div>
     </div>
+    <div id="contact-img-div">
+        <img src="images/mailbox.svg" id="contact-img">
+    </div>
 </section>
 <footer>
     <div>
