Adjust styles for contact image and change color of text

--- a/index.html
+++ b/index.html
@@ -90,19 +90,21 @@
             <h3>Contact me</h3>
             <div class="section-headline-underline" id="section-headline-underline-contact"></div>
         </div>
-        <div class="section-text">
+        <div class="section-text" id="section-text-contact">
             <p>
                 If you want to get to know more about me and my work, are interested in a cooperation or have any
                 questions, feel free to contact me.
             </p>
-            <div class="button-group">
-                <a href="mailto:liviacodes@t-online.de" class="primary-button">Leave a message</a>
-            </div>
+                <a href="mailto:liviacodes@t-online.de" class="primary-button" id="contact-btn">Leave a message</a>
+        </div>
+        <div>
+
+        </div>
+        <div id="contact-img-div">
+            <img src="images/mailbox.svg" id="contact-img">
         </div>
     </div>
-    <div id="contact-img-div">
-        <img src="images/mailbox.svg" id="contact-img">
-    </div>
+
 </section>
 <footer>
     <div>
