Turn button group into a grid itself

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p id="home-p">I solve problems with design and code, put together in a creative solution.</p>
         <div class="button-group">
             <a href="#about" class="primary-button">Get to know me</a>
-            <a href="#contact" class="secondary-button">Contact me</a>
+            <a href="#contact" class="primary-button">Contact me</a>
         </div>
 
     </div>
